--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,12 @@
   <body>
     <h1>Welcome to <%=fitnessData.appName%></h1>
     <p><a href="about">About</a></p>
-    <!-- <p><a href="books/search">Search for books</a></p>
-    <p><a href="users/register">Register with us</a></p>
-    <p><a href="users/login">Login</a></p>
-    <p><a href="./books/addbook">Add a new book</a></p>
-    <p><a href="books/list">List books</a></p>
-    <p><a href="users/logout">Logout</a></p> -->
+    <!-- <p><a href="books/search">Search for books</a></p> -->
+    <p><a href="auth/register">Register with us</a></p>
+    <p><a href="auth/login">Login</a></p>
+    <!-- <p><a href="./books/addbook">Add a new book</a></p> -->
+    <!-- <p><a href="books/list">List books</a></p> -->
+    <p><a href="auth/logout">Logout</a></p>
+    <p><a href="workouts">workouts</a></p>
   </body>
 </html>
