--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,5 +14,7 @@
         <p>Password: <input id="password" type="password" name="password" /></p>
         <input type="submit" value="register" />
       </form>
+      <br>
+      <a href="/">Home</a>
   </body>
 </html>
