--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,48 @@
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: darkcyan;
+}
+
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: cadetblue;
+}
+
+p,li {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 10px;
+}
+
+a:link {
+    color: rgb(65, 102, 0);
+    text-decoration: none;
+    padding:5px;
+  }
+  
+  /* visited link */
+  a:visited {
+    color: rgb(128, 137, 0);
+    text-decoration: none;
+    padding:5px;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: white;
+    text-decoration: none;
+    background-color: rgb(88, 138, 0);
+    padding:5px;
+  }
+  
+  /* selected link */
+  a:active {
+    color: blue;
+    text-decoration: none;
+    padding:5px;
+  }
+
 h2 {
   margin-bottom: 20px;
 }
@@ -6,7 +51,19 @@ h2 {
   margin-bottom: 20px;
 }
 
-.btn {
+input{
+  margin-top: 20px;
+}
+
+button{
+  margin-top: 20px;
+  background-color: rgb(65, 102, 0);
+  color: azure;
+  border: 0cm;
+  width: 70px;
+  height: 25px;
+}
+/* .btn {
   padding: 8px 14px;
   background: #4a90e2;
   color: white;
@@ -28,12 +85,12 @@ h2 {
 
 .btn-small:hover {
   background: #666;
-}
+} */
 
-.workout-table {
+/* .workout-table {
   width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
+  border-collapse: separate;
+  margin-top: 20px;
 }
 
 .workout-table th,
@@ -45,4 +102,4 @@ h2 {
 .workout-table th {
   background: #f5f5f5;
   text-align: left;
-}
+} */
