--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,5 +11,7 @@
         <p>Password: <input id="password" type="password" name="password" /></p>
         <button type="submit">login</button>
       </form>
+      <br>
+      <a href="/">Home</a>
   </body>
 </html>
