--- a/views/workout.ejs
+++ b/views/workout.ejs
@@ -10,7 +10,7 @@
   <h1>My workouts</h1>
 
   <div class="top-actions">
-    <a href="/workouts/new">Add New Workout</a>
+    <a href="/workouts/addworkout">Add New Workout</a>
     <a href="/workouts/search">Search Workouts</a>
     <a href="/">Back to Home</a>
   </div>
@@ -19,30 +19,30 @@
     <p>You haven't logged any workouts yet, using the 'Add New Workout' to add one!</p>
   <% } else{ %>
 
-    <table>
-      <caption>Workouts</caption>
-      <thead>
-        <tr>
-          <th>Date</th>
-          <!-- <th>Title</th>
-          <th>Notes</th> -->
-          <th>Details</th>
-        </tr>
-      </thead>
+  <table>
+  <caption>Workouts</caption>
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Title</th>
+      <th>Exercises</th>
+      <th>Details</th>
+    </tr>
+  </thead>
 
-      <% workout.forEach(workout => {  %>
-        <tbody>
-          <tr>
-            <td><%= workout.workout_date.toISOString().split("T")[0] %></td>
-            <!-- <td><%= workout.title %></td> -->
-            <!-- <td><%= workout.notes || '-' %></td> -->
-            <td><a href="/workouts/<%= workout.id %>">View</a></td>
-          </tr>
-        </tbody>
+  <% workout.forEach(workout => {  %>
+    <tbody>
+      <tr>
+        <td><%= workout.workout_date.toISOString().split("T")[0] %></td>
+        <td><%= workout.title %></td>
+        <td><%= workout.exercise_names || '-' %></td>
+        <td><a href="/workouts/<%= workout.id %>">View</a></td>
+      </tr>
+    </tbody>
+  <% }); %>
+</table>
 
-      <% }); %>
 
-    </table>
     <% } %>
   
 </body>
