--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
 
     <!-- 用 iframe 把 /weather/now 的 HTML “嵌”进来 -->
     <iframe 
-      src="/weather/now?city=london" 
+      src="/./weather/now?city=london" 
       style="border:none; width:100%; max-width:500px; height:220px;">
     </iframe>
 
